# drawing-machine

./: .env.example  .gitignore  DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  complete_system_demo.py  debug_blockchain_apis.py  debug_direction.py  debug_etherscan_detailed.py  debug_mode_check.py  demo_pipeline.py  docker-compose.dev.yml  docker-compose.monitoring.yml  drawing-machine.code-workspace  last_motor_states.json  live_ethereum_motor_demo.py  main.py  manual_control_backend_demo.py  manual_control_demo.py  manual_control_with_gui_demo.py  pyproject.toml  requirements.txt  setup_live_blockchain.py  simple_demo.py  simple_working_demo.py  start-dev-environment.ps1  start-drawing-machine.bat  test_live_blockchain_data.py  test_live_visualization.py  test_motor_connection.py  test_motor_directions.py  test_motor_format.py  test_railway_connection.py  test_utilization_motors.py  working_demo.py
.claude/: settings.local.json
.claude/commands/: tdd.md
.claude/workflows/: tdd_session.md
.github/workflows/: advanced_deployment_pipeline.yml  ci.yml  tdd_pipeline.yml
cloud/data_aggregator/: __init__.py  blockchain_fetcher.py  data_processor.py  motor_command_generator.py
cloud/orchestrator/: __init__.py  cloud_orchestrator.py  drawing_session_manager.py  pipeline_orchestrator.py
config/: README.md  config_manager.py
config/shared/blockchain/: api_endpoints.yaml  service_apis.yaml
config/shared/logging/: logging_config.yaml
config/shared/monitoring/: alert_rules.yaml  prometheus_config.yaml
config/shared/motor/: motor_mappings.yaml
config/shared/security/: security_config.yaml
docker/: Dockerfile.cloud.dev  Dockerfile.edge.dev
docs/authentication/: wallet-auth-implementation-plan.md
edge/manual_control/: __init__.py  manual_control_server.py
edge/motor_controller/: __init__.py  hardware_interface.py  motor_driver.py  safety_controller.py
frontend/: .env.example  _redirects  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css  styles.css
frontend/src/components/: DataDisplayPanel.vue  ModeSelector.vue  MotorControl.vue  MotorVisualization.vue  SessionRecorder.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/config/: constants.ts
frontend/src/router/: index.ts
frontend/src/views/: AdminControlView.vue  HomeView.vue  ManualControlView.vue  VisitorView.vue
monitoring/grafana/dashboards/: system-overview.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
scripts/: README_TDD_Workflow.md  __init__.py  auto_test_runner.py  create_tdd_project.py  generate_project_documentation.py  setup_github_project.py  tdd_workflow.py  test_auto_test_integration.py  test_dev_environment.py  test_file_watcher_integration.py  test_tdd_workflow.py  validate_trunk_based_project_setup.py
shared/: __init__.py
shared/models/: __init__.py  blockchain_data.py  drawing_session.py  motor_commands.py
shared/utils/: __init__.py
src/: blockchain_data_validator.py  ethereum_data_processor.py
tests/: __init__.py  test_BlockchainDataValidator.py
tests/integration/: test_environment_integration.py
tests/integration_demo/: test_MotorControlProcessor.py
tests/tdd_demo/: test_EthereumDataProcessor.py
tests/unit/: __init__.py  test_auto_test_integration.py  test_basic.py  test_core.py  test_data_aggregator.py  test_dev_environment.py  test_file_watcher_integration.py  test_foundational_models.py  test_motor_controller.py  test_scripts_coverage.py  test_shared_modules.py  test_tdd_workflow.py
tools/: control_panel_gui.py  integrated_control_panel.py  mock_motor_tcp.py  mock_motor_tcp_gui.py  test_tcp_communication.py
tools/test_virtual_ports.py/: test_virtual_ports.py
